# Changelog

## Version 5.5.7

* Fixing #503 missing CRF mode for SVT-AV1 (thanks to ignace72)
* Fixing #506 excessive amounts of RAM used and not cleared - partially mitigated (thanks to 19Battlestar65)
* Fixing #509 Portuguese translations (thanks to Felipe Augusto Arantes de Souza)
* Fixing #516 Performance improvements due to constant stream reads (thanks to William Barath)

## Version 5.5.6

* Fixing #485 Cannot Restore Queue Containing HDR10+ Entries (thanks to Maddie Davis)
* Fixing #487 Filename corrupted on path change (thanks to Maddie Davis)
* Fixing #491 Can't open Setting in Chinese upgraded from old version (thanks to 谈天才)
* Fixing #493 Profiles did not load config for remove hdr, remove metadata or copy chapter toggles (thanks to micron888)
* Fixing #494 frame rate change in 2 pass mode ("Bitrate" mode) results in error for AVC x264 encoder (thanks to Ivan Gorin)

## Version 5.5.5

* Fixing #479 some zho and jpn translations, fixed some typos (thanks to Jing Luo)
* Fixing incorrect PNG profiles for mac toolbox icons

## Version 5.5.4

* Fixing #474 SVT-AV1 single pass would not be set on return from queue (thanks to veldspar)
* Fixing #475 Autocrop can break with index error (thanks to No Name / phanluchoaofficial1152)
* Fixing #477 HDR10+ not extracting with NVEncC encoder, switching to built in copy ability (thanks to Genine-Collin)

## Version 5.5.3

* Fixing missing language options (thanks to RoDanny2021)

## Version 5.5.2

* Adding #469 Romanian translations (thanks to RoDanny2021)
* Fixing #468 Custom resolutions not applying (thanks to GT500org)

## Version 5.5.1

* Fixing #465 Russian translation (thanks to Ta0ba0)
* Fixing #466 AudioProfile could be deleted before fully created, causing runtime error (thanks to Jean-François Roy)
* Fixing to only allow one new profile window at a time

## Version 5.5.0

* Adding decoder option for NVEncC and QSVEncC
* Adding option to disable messages on encoding completion or error